# page_loader

./: .gitignore  Makefile  README.md  mikhailovsky-ru-theatre-company-artistic-administration-.html  mikhailovsky-ru-theatre-company-artists-f-ekaterina-kurenkova-.html  pyproject.toml
.github/workflows/: README.md
logs/: log_config.py
main/: __init__.py  loader.py  page_loader.py
main/scripts/: loader.py  page_loader.py
page_loader/: __init__.py  classes.py  directory.py  functions.py  io.py  loader.py  naming.py  os_data.py  page.py  page_loader.py  url.py  url_requests.py  user_messages.py  work_with_content.py
page_loader/scripts/: loader.py  page_loader.py
reports/tests/: index.html
tests/: test_dir.py  test_errors.py  test_main.py  test_naming.py  test_requests.py
tests/fixtures/: expected.html  expected2.html  html_with_links.html  js_file.js  raw.html  test_file.txt
